--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/ushell-module-cra",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Ushell module for create-react-app.",
   "main": "index.sh",
   "repository": {
@@ -21,5 +21,11 @@
   "homepage": "https://github.com/afeiship/ushell-module-cra",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "scripts": {
+    "release": "release-it"
+  },
+  "devDependencies": {
+    "release-it": "^15.0.0"
   }
 }
