--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
 node_modules
 bower_components
 coverage
-npm-debug.log
-yarn.lock
-Gemfile.lock
-yarn-error.log
-package-lock.json
 .DS_Store
 .idea
-*.zip
-*.tar.gz
-
-# vscode
 .vscode
+
+# vscode localhistory
 .history
+dist
 
-
+# package manager
+npm-debug.log
+yarn.lock
+package-lock.json
+pnpm-lock.yaml
